force-app/main/default/objects/Embryo_Batch__c/fields/Available_Embryos__c.field-meta.xml
<CustomField>
    <fullName>Available_Embryos__c</fullName>
    <label>Available Embryos</label>
    <summaryFilterItems>
        <field>Embryo__c.Embryo_Status__c</field>
        <operation>notEqual</operation>
        <value>Discarded</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Embryo__c.Embryo_Status__c</field>
        <operation>notEqual</operation>
        <value>Transferred</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Embryo__c.Embryo_Status__c</field>
        <operation>notEqual</operation>
        <value>For Discard</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Embryo__c.Embryo_Status__c</field>
        <operation>notEqual</operation>
        <value>PGT Testing In Progress</value>
    </summaryFilterItems>
    <summaryForeignKey>Embryo__c.Embryo_Batch2__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>