force-app/main/default/objects/Embryo_Batch__c/fields/Batch_Active__c.field-meta.xml
<CustomField>
    <fullName>Batch_Active__c</fullName>
    <formula>Available_Embryos__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Active</label>
    <type>Checkbox</type>
</CustomField>