force-app/main/default/objects/Embryo_Batch__c/fields/Cycle_Created_In__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Created_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cycle Created In</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Embryo Batches</relationshipLabel>
    <relationshipName>Embryo_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>