force-app/main/default/objects/Embryo_Batch__c/fields/Deg__c.field-meta.xml
<CustomField>
    <fullName>Deg__c</fullName>
    <label>Deg</label>
    <summaryFilterItems>
        <field>Embryo__c.Fertilisation_Status__c</field>
        <operation>equals</operation>
        <value>Deg</value>
    </summaryFilterItems>
    <summaryForeignKey>Embryo__c.Embryo_Batch2__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>