force-app/main/default/objects/Embryo_Batch__c/fields/Eggs_Fertilised__c.field-meta.xml
<CustomField>
    <fullName>Eggs_Fertilised__c</fullName>
    <label>Eggs Fertilised</label>
    <summaryFilterItems>
        <field>Embryo__c.Fertilisation_Status__c</field>
        <operation>equals</operation>
        <value>2PN</value>
    </summaryFilterItems>
    <summaryForeignKey>Embryo__c.Embryo_Batch2__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>