force-app/main/default/objects/Embryo_Batch__c/fields/Eggs_Inseminated__c.field-meta.xml
<CustomField>
    <fullName>Eggs_Inseminated__c</fullName>
    <label>Eggs Inseminated</label>
    <summaryForeignKey>Embryo__c.Embryo_Batch2__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>