force-app/main/default/objects/Embryo_Batch__c/fields/Number_Fertilised_by_IVF__c.field-meta.xml
<CustomField>
    <fullName>Number_Fertilised_by_IVF__c</fullName>
    <label>Number Fertilised by IVF</label>
    <summaryFilterItems>
        <field>Embryo__c.Fertilisation_Status__c</field>
        <operation>equals</operation>
        <value>2PN</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Embryo__c.Insemination_Type__c</field>
        <operation>equals</operation>
        <value>IVF</value>
    </summaryFilterItems>
    <summaryForeignKey>Embryo__c.Embryo_Batch2__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>