force-app/main/default/objects/Embryo_Batch__c/fields/Number_Treated_by_ICSI__c.field-meta.xml
<CustomField>
    <fullName>Number_Treated_by_ICSI__c</fullName>
    <label>Number Treated by ICSI</label>
    <summaryFilterItems>
        <field>Embryo__c.Insemination_Type__c</field>
        <operation>equals</operation>
        <value>ICSI</value>
    </summaryFilterItems>
    <summaryForeignKey>Embryo__c.Embryo_Batch2__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>