force-app/main/default/objects/Embryo_Batch__c/fields/Ongoing__c.field-meta.xml
<CustomField>
    <fullName>Ongoing__c</fullName>
    <label>Ongoing</label>
    <summaryFilterItems>
        <field>Embryo__c.Embryo_Status__c</field>
        <operation>equals</operation>
        <value>Ongoing</value>
    </summaryFilterItems>
    <summaryForeignKey>Embryo__c.Embryo_Batch2__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>