force-app/main/default/objects/Embryo_Batch__c/fields/Related_Cycle_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Cycle_Id__c</fullName>
    <formula>Household__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Cycle Id</label>
    <type>Text</type>
</CustomField>