force-app/main/default/objects/Embryo_Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Available_Embryos__c</columns>
    <columns>Ongoing__c</columns>
    <columns>Transferred__c</columns>
    <columns>Frozen__c</columns>
    <columns>Discarded__c</columns>
    <columns>Storage_Date__c</columns>
    <columns>Storage_Location__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Household__c</columns>
    <columns>Batch_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>