force-app/main/default/objects/Embryo_Batch__c/listViews/Embryos_in_the_lab.listView-meta.xml
<ListView>
    <fullName>Embryos_in_the_lab</fullName>
    <columns>NAME</columns>
    <columns>Household__c</columns>
    <columns>Number_Fertilised_by_ICSI__c</columns>
    <columns>Number_Fertilised_by_IVF__c</columns>
    <columns>Ongoing__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ongoing__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Embryos in the lab</label>
</ListView>